Bug 149204 - FILEOPEN: Incorrect string in chart
Summary: FILEOPEN: Incorrect string in chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-20 14:00 UTC by Xisco Faulí
Modified: 2022-09-12 21:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (56.18 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-20 14:00 UTC, Xisco Faulí
Details
Comparsion MSO vs LibreOffice 7.4 master (211.35 KB, image/png)
2022-05-20 14:01 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-20 14:00:49 UTC
Created attachment 180255 [details]
sample file

Steps to reproduce:
1. Open attached document

-> On the bottom right corner, the chart shows the text 'Series 1'. It shouldn't be there. See comparison

Reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 22d7cbc0f0c50c59abca7ab5f7db46e4d0e5f86a
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-20 14:01:20 UTC
Created attachment 180256 [details]
Comparsion MSO vs LibreOffice 7.4 master
Comment 2 Xisco Faulí 2022-05-20 14:02:24 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=462457455e9664a4ba79c4b21747cdb4e47da6ca

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2022-05-06 15:46:43 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2022-05-11 01:58:31 +0200
commit 462457455e9664a4ba79c4b21747cdb4e47da6ca (patch)
tree 96475a984dd250ee1ea4cbe89b40bbe7e81e0220
parent 35f4f75a506839025bca529bd7cc5a60ffe7a20f (diff)
chart2: remove code duplication in VSeriesPlotter::getSeriesNames

Bisected with: bibisect-linux64-7.4

Adding Cc: to Tomaž Vajngerl
Comment 3 Xisco Faulí 2022-05-20 14:04:31 UTC
Same issue reproduced with attachment 148475 [details] from bug 100610
Comment 4 Suthagar 2022-05-21 12:16:41 UTC
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 465c3ad95059f0efa13c8027f7383c4d20a5b2ff
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded



The Result is : Series 1 is not display in the about version.
Comment 5 kamal K 2022-05-21 12:41:36 UTC
Following Steps to Reproduce:

1. Opened the  attached document
2. On the bottom right corner, the chart shows the text 'Series 1'. 


Actual Results:

The text is displaying 'Series 1'in the below version

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: a2ffd71f20e14f797f30223fe29b3ac1e92eafdf
CPU threads: 4; OS: Mac OS X 10.15.7; UI render: Skia/Metal; VCL: osx
Locale: en-IN (en_IN.UTF-8); UI: en-US
Calc: threaded
Comment 6 Paris Oplopoios 2022-05-30 09:31:37 UTC
If it helps, before the regression patch the loop is ran once (filling the vector with Series1), and after the patch the loop is ran 3 times (filling the vector with Series1-3). If you break out of the loop the first time in the new version or return an empty vector the result is as expected.
Comment 7 Tomaz Vajngerl 2022-05-30 13:33:06 UTC
(In reply to Paris Oplopoios from comment #6)
> If it helps, before the regression patch the loop is ran once (filling the
> vector with Series1), and after the patch the loop is ran 3 times (filling
> the vector with Series1-3). If you break out of the loop the first time in
> the new version or return an empty vector the result is as expected.

I know that, but the name of the method is getSeriesNames - which then doesn't return all series names, but an arbitrary set of them, so it's just about figuring out what series names it returns and rename the method to that. For data tables support however I needed a method that returns all series names, which is why this change was made.
Comment 8 Xisco Faulí 2022-06-21 11:12:50 UTC
(In reply to Tomaz Vajngerl from comment #7)
> (In reply to Paris Oplopoios from comment #6)
> > If it helps, before the regression patch the loop is ran once (filling the
> > vector with Series1), and after the patch the loop is ran 3 times (filling
> > the vector with Series1-3). If you break out of the loop the first time in
> > the new version or return an empty vector the result is as expected.
> 
> I know that, but the name of the method is getSeriesNames - which then
> doesn't return all series names, but an arbitrary set of them, so it's just
> about figuring out what series names it returns and rename the method to
> that. For data tables support however I needed a method that returns all
> series names, which is why this change was made.

Hi Tomaz,
I was wondering, should the commit be reverted for now ? I've seen quite some files affected by this issue
Comment 9 Commit Notification 2022-06-22 18:54:42 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ccf84ce0de2580eadb1407f11707f05fb042a8bd

tdf#149204 revert getSeriesNames method to the original behaviour

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-06-23 08:06:39 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9a03e2b5ed80ff4f50ff3cc85fd75e32fe42b3f1

tdf#149204 revert getSeriesNames method to the original behaviour

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2022-07-01 10:32:15 UTC
I guess we can close this issue now.
Comment 12 Commit Notification 2022-09-12 21:33:43 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f7e874de97755be283675d7589a3f1401c54330

tdf#149204: chart2_xshape: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.