tdf#149204 revert getSeriesNames method to the original behaviour

The VSeriesPlotter::getSeriesNames returned a filtered list of
series names without the z-axis names, which is not expected from
the name, so when refactoring the assumption was to return all of
them names. This wasn't correct and has broken rendering of some
charts. This change reverts the method to the original behaviour.

Change-Id: I42464495a1a2b68a34efbc8409ae6c1417ff072d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136280
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit c5c1cbe485b2a24e5964c3e09e8d654e7dfe42c3)